@@ -2,10 +2,13 @@ package com.example.bankingsystemspring.controller;
 
 import com.example.bankingsystemspring.common.enums.TransactionType;
 import com.example.bankingsystemspring.common.mapper.AccountTransactionMapper;
+import com.example.bankingsystemspring.common.mapper.UserAccountMapper;
 import com.example.bankingsystemspring.model.AccountTransactionsEntity;
 import com.example.bankingsystemspring.model.UserAccountEntity;
 import com.example.bankingsystemspring.model.request.AccountTransactionRequest;
 import com.example.bankingsystemspring.model.response.AccountTransactionResponse;
+import com.example.bankingsystemspring.model.response.AccountTransactionSummary;
+import com.example.bankingsystemspring.model.response.UserAccountResponse;
 import com.example.bankingsystemspring.service.AccountTransactionService;
 import com.example.bankingsystemspring.service.UserAccountService;
 import jakarta.validation.constraints.Min;
@@ -21,7 +24,6 @@ import java.net.URI;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Validated
 @RestController
@@ -30,14 +32,14 @@ public class AccountTransactionController {
 
     private final AccountTransactionService accountTransactionService;
     private final UserAccountService userAccountService;
-    private final AccountTransactionMapper mapper;
+    private final AccountTransactionMapper accountTransactionMapper;
 
     @Autowired
     public AccountTransactionController(AccountTransactionService accountTransactionService,
-            UserAccountService userAccountService, AccountTransactionMapper mapper) {
+                                        UserAccountService userAccountService, AccountTransactionMapper accountTransactionMapper) {
         this.accountTransactionService = accountTransactionService;
         this.userAccountService = userAccountService;
-        this.mapper = mapper;
+        this.accountTransactionMapper = accountTransactionMapper;
     }
 
     @GetMapping("/{transactionId}")
@@ -47,22 +49,32 @@ public class AccountTransactionController {
         if (transaction.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
-        AccountTransactionResponse response = mapper.toAccountTransactionResponse(transaction.get());
+        AccountTransactionResponse response = accountTransactionMapper.toAccountTransactionResponse(transaction.get());
         return ResponseEntity.ok(response);
     }
 
     @GetMapping("/account/{accountId}")
-    public ResponseEntity<List<AccountTransactionResponse>> getTransactionsByAccount(@PathVariable UUID accountId) {
+    public ResponseEntity<AccountTransactionSummary> getTransactionsByAccount(@PathVariable UUID accountId) {
         Optional<UserAccountEntity> userAccount = userAccountService.findById(accountId);
 
         if (userAccount.isEmpty()) {
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
-        List<AccountTransactionsEntity> transactions = accountTransactionService.getTransactionsByAccount(userAccount.get());
-        List<AccountTransactionResponse> responses = transactions.stream()
-                .map(mapper::toAccountTransactionResponse)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responses);
+        List<AccountTransactionResponse> transactions = accountTransactionService.getTransactionsByAccount(userAccount.get())
+                .stream()
+                .map(accountTransactionMapper::toAccountTransactionResponse)
+                .toList();
+
+        BigDecimal userAccountBalance = userAccountService.calculateBalance(userAccount.get());
+
+        AccountTransactionSummary transactionSummary = new AccountTransactionSummary(
+                userAccount.get().getAccountId(),
+                userAccount.get().getChavePix(),
+                userAccount.get().getAccountHolderName(),
+                userAccountBalance,
+                transactions
+        );
+        return ResponseEntity.ok(transactionSummary);
     }
 
     @PostMapping("deposit/{accountId}")
@@ -83,7 +95,7 @@ public class AccountTransactionController {
         }
 
         String uri = String.format("transactions/%s", transaction.getTransactionId());
-        AccountTransactionResponse response = mapper.toAccountTransactionResponse(transaction);
+        AccountTransactionResponse response = accountTransactionMapper.toAccountTransactionResponse(transaction);
 
         response.setBalance(userAccountService.calculateBalance(originAccount.get()));
 
@@ -108,7 +120,7 @@ public class AccountTransactionController {
         }
 
         String uri = String.format("transactions/%s", transaction.getTransactionId());
-        AccountTransactionResponse response = mapper.toAccountTransactionResponse(transaction);
+        AccountTransactionResponse response = accountTransactionMapper.toAccountTransactionResponse(transaction);
 
         response.setBalance(userAccountService.calculateBalance(originAccount.get()));
 
@@ -116,8 +128,7 @@ public class AccountTransactionController {
     }
 
     @PostMapping("transfer")
-    public ResponseEntity<AccountTransactionResponse> Transaction(
-            @RequestBody AccountTransactionRequest transactionRequest) {
+    public ResponseEntity<AccountTransactionResponse> Transaction(@RequestBody @NotNull AccountTransactionRequest transactionRequest) {
         Optional<UserAccountEntity> originAccount = userAccountService.findById(transactionRequest.getAccountId());
         Optional<UserAccountEntity> destinationAccount = userAccountService.findByPix(transactionRequest.getChavePix());
 
@@ -135,7 +146,7 @@ public class AccountTransactionController {
         }
 
         String uri = String.format("transactions/%s", transaction.getTransactionId());
-        AccountTransactionResponse response = mapper.toAccountTransactionResponse(transaction);
+        AccountTransactionResponse response = accountTransactionMapper.toAccountTransactionResponse(transaction);
 
         return ResponseEntity.created(URI.create(uri)).body(response);
     }
